--- a/styles/auction-page.css
+++ b/styles/auction-page.css
@@ -24,6 +24,13 @@ header .fa-house, .text {
   padding-left: 80px;
   cursor: default;
   z-index: 1;
+  /* background-color: red; */
+}
+
+#greet {
+  /* background-color: green; */
+  padding-left: 80px;
+  color: white;
 }
 
 .menu {
@@ -104,12 +111,18 @@ header .fa-house, .text {
   box-sizing: border-box;
 }
 
-.sidebar li .fa-house {
+.sidebar li .fa-house,
+.sidebar li .fa-right-from-bracket {
   font-size: 25px;
   min-width: 60px;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+nav .fa-right-from-bracket {
+  color: white;
+  cursor: pointer;
 }
 
 .sidebar li .text {
@@ -139,9 +152,12 @@ header .fa-house, .text {
 }
 
 .sidebar li a:hover .fa-house,
-.sidebar li a:hover .text {
+.sidebar li a:hover .text,
+.sidebar li a:hover .fa-right-from-bracket
+{
   color: rgb(37, 64, 88);
 }
+
 
 .sidebar li .fa-house,
 .sidebar li .text {
@@ -247,7 +263,7 @@ header .fa-house, .text {
 .home .enter-bid {
   height: 400px;
   width: 300px;
-  background-color: green;
+  /* background-color: green; */
   border-radius: 15px;
   display: flex;
   justify-content: flex-end;
@@ -306,11 +322,13 @@ header .fa-house, .text {
 
 .home .form {
   width: 230px;
-  height: 140px;
+  height: 100px;
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-direction: column;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 .home .input-group {
@@ -319,7 +337,7 @@ header .fa-house, .text {
 }
 
 .home .input {
-  padding: 10px;
+  padding: 20px;
   width: 100%;
   max-width: 300px;
   box-sizing: border-box;
@@ -348,11 +366,26 @@ header .fa-house, .text {
   border-radius: 5px;
 }
 
+input::placeholder {
+  font-size: 16px; 
+}
+
+h4 {
+  display: inline-block;
+  color: yellowgreen;
+}
+
+
+
 .carousel :where(.card, .img) {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+}
+
+.carousel .card {
+  cursor: pointer;
 }
 
 .card .img {
@@ -553,7 +586,7 @@ header .fa-house, .text {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  min-height: 500px;
+  min-height: 1200px;
 }
 
 .top-bidders li,
@@ -583,7 +616,7 @@ header .fa-house, .text {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  height: 400px;
+  height: 1000px;
 }
 
 .bidders-tag {
@@ -600,6 +633,7 @@ header .fa-house, .text {
   width: 300px;
   display: flex;
   justify-content: center;
+  margin-right: 40px;
   align-items: center;
   flex-direction: column;
   border-radius: 0 15px 15px 0;
@@ -610,10 +644,20 @@ header .fa-house, .text {
   height: 350px;
   background-color: rgb(37, 64, 88);
   margin: 30px;
+  display: flex;
+  margin-left: 50px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .product-desc {
   font-size: 20px;
+}
+
+.carousel .card h2 {
+  text-align: center;
+  width: 300px;
 }
 
 .price-container {
@@ -642,6 +686,13 @@ header .fa-house, .text {
   border-radius: 15px 15px 0 0;
 }
 
+.bid-image-unique {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 15px 15px 0 0;
+}
+
 .bid-img {
   background-color: black;
   height: 60%;
@@ -663,13 +714,26 @@ header .fa-house, .text {
 .top-bidders li:hover h2,
 .top-bidders li:hover span,
 .activities li:hover h2,
-.activities li:hover span {
+.activities li:hover span,
+.top-bidders li:hover h4 {
   color: rgb(24, 43, 60);
 }
 
 .top-bidders li:hover img,
 .activities li:hover img {
   border: 4px solid rgb(24, 43, 60);;
+}
+
+.product-desc-container {
+  background-color: rgb(68, 112, 150);
+  padding: 20px;
+  margin: 20px 10px;
+  border-radius: 10px;
+  height: 200px;
+  width: 450px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* 
@@ -743,10 +807,6 @@ section .product-desc {
 .home section {
   background-color: green;
 } */
-
-
-
-
 
 
 
