--- a/styles/auction-page.css
+++ b/styles/auction-page.css
@@ -20,7 +20,7 @@ header .fa-house, .text {
 .product-name .name {
   font-size: 35px;
   font-weight: 700;
-  color: grey;
+  color: rgb(46, 172, 104);
   padding-left: 80px;
   cursor: default;
   z-index: 1;
@@ -214,7 +214,7 @@ nav .fa-right-from-bracket {
 .home .text {
   font-size: 40px;
   font-weight: 700;
-  color: grey;
+  color: rgb(46, 172, 104);
   padding: 50px 10px 40px 10px;
   cursor: default;
   z-index: 1;
@@ -625,6 +625,10 @@ h4 {
   font-size: 25px;
   color: white;
   cursor: default;
+}
+
+.highest-bid-entry {
+  text-align: center;
 }
 
 .highest-bid-price {
